
[TestConvertModule_Simple - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 1,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 13-14,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 16-22,
                                },
                                declare: true,
                                span: 9-23,
                            },
                            &ast.FuncDecl{
                                Name: &ast.Ident{
                                    Name: "foo",
                                    span: 41-44,
                                },
                                FuncSig: ast.FuncSig{
                                    Return: &ast.UnknownTypeAnn{
                                        span: 48-52,
                                    },
                                },
                                declare: true,
                                span: 32-53,
                            },
                            &ast.TypeDecl{
                                Name: &ast.Ident{
                                    Name: "MyType",
                                    span: 59-65,
                                },
                                TypeAnn: &ast.StringTypeAnn{
                                    span: 68-74,
                                },
                                declare: true,
                                span: 54-75,
                            },
                        },
                    },
                },
            },
        },
        count: 1,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_SingleNamespace - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 1,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 39-40,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 42-48,
                                },
                                export: true,
                                declare: true,
                                span: 35-49,
                            },
                            &ast.FuncDecl{
                                Name: &ast.Ident{
                                    Name: "foo",
                                    span: 61-64,
                                },
                                FuncSig: ast.FuncSig{
                                    Return: &ast.UnknownTypeAnn{
                                        span: 68-72,
                                    },
                                },
                                export: true,
                                declare: true,
                                span: 52-73,
                            },
                        },
                    },
                    key: "MyNamespace",
                },
            },
        },
        count: 1,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_NestedNamespaces - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 2,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "y",
                                    span: 76-77,
                                },
                                TypeAnn: &ast.StringTypeAnn{
                                    span: 79-85,
                                },
                                export: true,
                                declare: true,
                                span: 72-86,
                            },
                        },
                    },
                    key: "Outer",
                },
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 55-56,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 58-64,
                                },
                                export: true,
                                declare: true,
                                span: 51-65,
                            },
                        },
                    },
                    key: "Outer.Inner",
                },
            },
        },
        count: 2,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_MixedGlobalAndNamespace - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 2,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "globalVar",
                                    span: 13-22,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 24-30,
                                },
                                declare: true,
                                span: 9-31,
                            },
                            &ast.FuncDecl{
                                Name: &ast.Ident{
                                    Name: "globalFunc",
                                    span: 106-116,
                                },
                                FuncSig: ast.FuncSig{
                                    Return: &ast.UnknownTypeAnn{
                                        span: 120-124,
                                    },
                                },
                                declare: true,
                                span: 97-125,
                            },
                        },
                    },
                },
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "nsVar",
                                    span: 71-76,
                                },
                                TypeAnn: &ast.StringTypeAnn{
                                    span: 78-84,
                                },
                                export: true,
                                declare: true,
                                span: 67-85,
                            },
                        },
                    },
                    key: "MyNamespace",
                },
            },
        },
        count: 2,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_MultipleNamespaces - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 2,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 31-32,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 34-40,
                                },
                                export: true,
                                declare: true,
                                span: 27-41,
                            },
                        },
                    },
                    key: "NS1",
                },
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "y",
                                    span: 75-76,
                                },
                                TypeAnn: &ast.StringTypeAnn{
                                    span: 78-84,
                                },
                                export: true,
                                declare: true,
                                span: 71-85,
                            },
                        },
                    },
                    key: "NS2",
                },
            },
        },
        count: 2,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_NamespaceMerging - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 1,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 39-40,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 42-48,
                                },
                                export: true,
                                declare: true,
                                span: 35-49,
                            },
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "y",
                                    span: 91-92,
                                },
                                TypeAnn: &ast.StringTypeAnn{
                                    span: 94-100,
                                },
                                export: true,
                                declare: true,
                                span: 87-101,
                            },
                        },
                    },
                    key: "MyNamespace",
                },
            },
        },
        count: 1,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_AmbientDeclarations - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 1,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 13-14,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 16-22,
                                },
                                declare: true,
                                span: 9-23,
                            },
                            &ast.FuncDecl{
                                Name: &ast.Ident{
                                    Name: "foo",
                                    span: 41-44,
                                },
                                FuncSig: ast.FuncSig{
                                    Return: &ast.UnknownTypeAnn{
                                        span: 48-52,
                                    },
                                },
                                declare: true,
                                span: 32-53,
                            },
                            &ast.ClassDecl{
                                Name: &ast.Ident{
                                    Name: "MyClass",
                                    span: 68-75,
                                },
                                declare: true,
                                span: 62-78,
                            },
                        },
                    },
                },
            },
        },
        count: 1,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_AmbientNamespace - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 1,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 39-40,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 42-48,
                                },
                                export: true,
                                declare: true,
                                span: 35-49,
                            },
                        },
                    },
                    key: "MyNamespace",
                },
            },
        },
        count: 1,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_DeeplyNestedNamespaces - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 1,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 67-68,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 70-76,
                                },
                                export: true,
                                declare: true,
                                span: 63-77,
                            },
                        },
                    },
                    key: "A.B.C",
                },
            },
        },
        count: 1,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_ModuleDeclaration - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        isoid: 0x0,
        root:  &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            isoid: 0x0,
            count: 1,
            items: {
                {
                    value: &ast.Namespace{
                        Decls: {
                            &ast.VarDecl{
                                Kind:    1,
                                Pattern: &ast.IdentPat{
                                    Name:    "x",
                                    TypeAnn: nil,
                                    Default: nil,
                                    span:    ast.Span{
                                        Start:    ast.Location{Line:3, Column:7},
                                        End:      ast.Location{Line:3, Column:8},
                                        SourceID: 0,
                                    },
                                    inferredType: nil,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: ast.Span{
                                        Start:    ast.Location{Line:3, Column:10},
                                        End:      ast.Location{Line:3, Column:16},
                                        SourceID: 0,
                                    },
                                    inferredType: nil,
                                },
                                Init:    nil,
                                export:  false,
                                declare: true,
                                span:    ast.Span{
                                    Start:    ast.Location{Line:3, Column:3},
                                    End:      ast.Location{Line:3, Column:17},
                                    SourceID: 0,
                                },
                                InferredType: nil,
                                provenance:   nil,
                            },
                            &ast.FuncDecl{
                                Name: &ast.Ident{
                                    Name: "foo",
                                    span: ast.Span{
                                        Start:    ast.Location{Line:4, Column:12},
                                        End:      ast.Location{Line:4, Column:15},
                                        SourceID: 0,
                                    },
                                },
                                FuncSig: ast.FuncSig{
                                    TypeParams: {
                                    },
                                    Params: {
                                    },
                                    Return: &ast.TypeRefTypeAnn{
                                        Name: &ast.Ident{
                                            Name: "void",
                                            span: ast.Span{
                                                Start:    ast.Location{Line:4, Column:19},
                                                End:      ast.Location{Line:4, Column:23},
                                                SourceID: 0,
                                            },
                                        },
                                        TypeArgs: {
                                        },
                                        span: ast.Span{
                                            Start:    ast.Location{Line:4, Column:19},
                                            End:      ast.Location{Line:4, Column:23},
                                            SourceID: 0,
                                        },
                                        inferredType: nil,
                                    },
                                    Throws: nil,
                                    Async:  false,
                                },
                                Body:    (*ast.Block)(nil),
                                export:  false,
                                declare: true,
                                span:    ast.Span{
                                    Start:    ast.Location{Line:4, Column:3},
                                    End:      ast.Location{Line:4, Column:24},
                                    SourceID: 0,
                                },
                                provenance: nil,
                            },
                        },
                    },
                    key: "my-module",
                },
            },
            children: (*[]*btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace])(nil),
        },
        count:         1,
        empty:         btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{},
        min:           31,
        max:           63,
        copyValues:    false,
        isoCopyValues: false,
    },
}
---

[TestConvertModule_AmbientNamespaceAutoExport - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 1,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 39-40,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 42-48,
                                },
                                export: true,
                                declare: true,
                                span: 35-49,
                            },
                            &ast.FuncDecl{
                                Name: &ast.Ident{
                                    Name: "foo",
                                    span: 61-64,
                                },
                                FuncSig: ast.FuncSig{
                                    Return: &ast.UnknownTypeAnn{
                                        span: 68-72,
                                    },
                                },
                                export: true,
                                declare: true,
                                span: 52-73,
                            },
                            &ast.ClassDecl{
                                Name: &ast.Ident{
                                    Name: "MyClass",
                                    span: 82-89,
                                },
                                export: true,
                                declare: true,
                                span: 76-92,
                            },
                            &ast.InterfaceDecl{
                                Name: &ast.Ident{
                                    Name: "MyInterface",
                                    span: 105-116,
                                },
                                TypeAnn: &ast.ObjectTypeAnn{
                                    span: 95-119,
                                },
                                export: true,
                                declare: true,
                                span: 95-119,
                            },
                            &ast.TypeDecl{
                                Name: &ast.Ident{
                                    Name: "MyType",
                                    span: 127-133,
                                },
                                TypeAnn: &ast.StringTypeAnn{
                                    span: 136-142,
                                },
                                export: true,
                                declare: true,
                                span: 122-143,
                            },
                        },
                    },
                    key: "MyNamespace",
                },
            },
        },
        count: 1,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_AmbientNamespaceNestedAutoExport - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 2,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "y",
                                    span: 102-103,
                                },
                                TypeAnn: &ast.StringTypeAnn{
                                    span: 105-111,
                                },
                                export: true,
                                declare: true,
                                span: 98-112,
                            },
                        },
                    },
                    key: "Outer",
                },
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 55-56,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 58-64,
                                },
                                export: true,
                                declare: true,
                                span: 51-65,
                            },
                            &ast.FuncDecl{
                                Name: &ast.Ident{
                                    Name: "foo",
                                    span: 79-82,
                                },
                                FuncSig: ast.FuncSig{
                                    Return: &ast.UnknownTypeAnn{
                                        span: 86-90,
                                    },
                                },
                                export: true,
                                declare: true,
                                span: 70-91,
                            },
                        },
                    },
                    key: "Outer.Inner",
                },
            },
        },
        count: 2,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_TopLevelDeclareNotAutoExported - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 1,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 13-14,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 16-22,
                                },
                                declare: true,
                                span: 9-23,
                            },
                            &ast.FuncDecl{
                                Name: &ast.Ident{
                                    Name: "foo",
                                    span: 41-44,
                                },
                                FuncSig: ast.FuncSig{
                                    Return: &ast.UnknownTypeAnn{
                                        span: 48-52,
                                    },
                                },
                                declare: true,
                                span: 32-53,
                            },
                        },
                    },
                },
            },
        },
        count: 1,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_ExplicitExportInAmbientNamespace - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 1,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 46-47,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 49-55,
                                },
                                export: true,
                                declare: true,
                                span: 42-56,
                            },
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "y",
                                    span: 63-64,
                                },
                                TypeAnn: &ast.StringTypeAnn{
                                    span: 66-72,
                                },
                                export: true,
                                declare: true,
                                span: 59-73,
                            },
                        },
                    },
                    key: "MyNamespace",
                },
            },
        },
        count: 1,
        min: 31,
        max: 63,
    },
}
---
